<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Resume">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name"
        style="@style/name"/>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:src="@drawable/stylish_underline"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:padding="10dip">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

        <TextView
            android:text="Contact Info"
            android:id="@+id/contactTitle"
            style="@style/sectionTitle"/>

    <!--    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/contentHolder">-->
      <!--      <TextView
                android:text="@string/address"
                android:id="@+id/address"
                style="@style/content"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/email"
            style="style/content"/>

    <!--        <TextView
                android:text="@string/phone"
                android:id="@+id/phone"
                style="style/content"/>
        </LinearLayout>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Education"
            android:id="@+id/eduTitle"
            style="@style/sectionTitle"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/contentHolder">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degreename"
                android:id="@+id/degreename"
                style="@style/content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/college"
                android:id="@+id/college"
                style="style/content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graddate"
                android:id="@+id/graddate"
                style="style/content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpa"
                android:id="@+id/gpa"
                style="style/content"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Work Experience"
            android:id="@+id/workTitle"
            style="@style/sectionTitle"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/contentHolder">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position1"
                android:id="@+id/position1"
                style="@style/content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company1"
                android:id="@+id/company1"
                style="style/content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dates1"
                android:id="@+id/dates1"
                style="style/content"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Extracurricular Activities"
            android:id="@+id/activitiesTitle"
            style="@style/sectionTitle"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/contentHolder">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clubs_acm"
                android:id="@+id/clubs_acm"
                style="@style/content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clubs_wdd"
                android:id="@+id/clubs_wdd"
                style="@style/content"/>

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:text="Check out my projects on GitHub"
            android:id="@+id/github"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
